@@ -1,6 +1,7 @@
 User johns
 Date:
 
+    VDPAU: support for studio levels added.
     Add support for skip chroma deinterlace to software deinterlacer.
     Type of software deinterlacer now configurable from setup menu.
     Mixer channel could be set through command line option.
